# pitaya

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  Makefile  NOTICE  README.md  ROADMAP.md  TRADEMARKS.md  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
apps/pitaya-desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/pitaya-desktop/src/: bindings.ts  index.css  main.tsx  router.tsx
apps/pitaya-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/pitaya-desktop/src-tauri/capabilities/: default.json
apps/pitaya-desktop/src-tauri/src/: lib.rs  main.rs
apps/pitaya-desktop/src/lib/: query-client.ts  tauri-types.ts  tauri.ts
apps/pitaya-desktop/src/pages/: HarnessHome.tsx  SettingsPlaceholder.tsx
apps/pitaya-desktop/src/routes/: index.tsx  root.tsx  settings.tsx
apps/pitaya-desktop/src/stores/: ui.ts
crates/pitaya-audio/: Cargo.toml
crates/pitaya-audio/src/: lib.rs
crates/pitaya-chat/: Cargo.toml
crates/pitaya-chat/src/: lib.rs
crates/pitaya-context/: Cargo.toml
crates/pitaya-context/src/: lib.rs
crates/pitaya-core/: Cargo.toml
crates/pitaya-core/src/: chat.rs  commands.rs  errors.rs  events.rs  ids.rs  lib.rs  queries.rs  status.rs
crates/pitaya-diarization/: Cargo.toml
crates/pitaya-diarization/src/: lib.rs
crates/pitaya-engine/: Cargo.toml
crates/pitaya-engine/src/: engine_handle.rs  ipc_server.rs  lib.rs
crates/pitaya-llm/: Cargo.toml
crates/pitaya-llm/src/: lib.rs
crates/pitaya-markdown/: Cargo.toml
crates/pitaya-markdown/src/: lib.rs
crates/pitaya-mcp/: Cargo.toml
crates/pitaya-mcp/src/: main.rs
crates/pitaya-meetings/: Cargo.toml
crates/pitaya-meetings/src/: lib.rs
crates/pitaya-notes/: Cargo.toml
crates/pitaya-notes/src/: lib.rs
crates/pitaya-storage/: Cargo.toml
crates/pitaya-storage/src/: lib.rs  migrations.rs
crates/pitaya-transcription/: Cargo.toml
crates/pitaya-transcription/src/: lib.rs
docs/adr/: ADR-010-dual-transport.md  README.md
docs/design/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
