[package]
name = "pitaya-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Dual-track audio capture (PipeWire) for Pitaya"

[lints]
workspace = true

[features]
default = []

[dependencies]
pitaya-core = { workspace = true }
