[package]
name = "pitaya-chat"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Chat turn orchestration and recipes for Pitaya"

[lints]
workspace = true

[dependencies]
pitaya-core = { workspace = true }
pitaya-context = { workspace = true }
