[package]
name = "pitaya-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared DTOs, IDs, and IPC contracts for Pitaya"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
