[package]
name = "pitaya-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Shared DTOs, IDs, and IPC contracts for Pitaya"

[lints]
workspace = true

[features]
typescript = ["dep:specta"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
specta = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
