[package]
name = "pitaya-notes"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Note enhancement, templates, and citation synthesis for Pitaya"

[lints]
workspace = true

[dependencies]
pitaya-core = { workspace = true }
pitaya-markdown = { workspace = true }
