[package]
name = "pitaya-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pitaya desktop shell (Tauri + React)"
publish = false

[lib]
name = "pitaya_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
pitaya-core = { workspace = true }
pitaya-engine = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
